# LMLP

./: .gitignore  CMakeLists.txt  README.md  neuralnet.c
c/: CMakeLists.txt  README.md  example.c
c++/: CMakeLists.txt  README.md
c++/include/: LMLP.h  LMLP.hpp  function.h  matrix.h  network.h
c++/src/: function.cpp  main.cpp  matrix.cpp  network.cpp
c/include/: LMLP.h  error.h  matrix.h  utility.h
c/src/: error.c  matrix.c  network.c  utility.c
